--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/expense_tracker?useSSL=false
-spring.datasource.username= springstudent
-spring.datasource.password= springstudent
-server.port=9001
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
+spring.profiles.active=${ENV:dev}
 # App Properties
 app.jwtSecret=expensetrackerjwtsecret
 app.jwtExpirationMs= 86400000
